# pusher-serve-wsrs

./: .env.example  .gitignore  Cargo.toml  example-config.toml  readme.md
crates/credentials/: Cargo.toml
crates/credentials/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: main.rs
crates/message-derive/: Cargo.toml
crates/message-derive/src/: lib.rs
crates/pusher/: .gitignore  Cargo.toml  diesel.toml
crates/pusher/migrations/2022-01-31-215955_create_apps/: up.sql
crates/pusher/src/: adapter.rs  app.rs  auth.rs  channel.rs  channel_managers.rs  kind.rs  lib.rs  main.rs  messages.rs  namespace.rs  repository.rs  session_manager.rs  socket.rs  ws_handler.rs
crates/pusher/src/api/: apps.rs  channels.rs  events.rs  messages.rs  mod.rs
crates/pusher/src/repository/: mod.rs
crates/pusher/src/repository/sqlite/: mod.rs  schema.rs
crates/pusher/src/repository/src/repository/sqlite/: schema.rs
crates/pusher/src/ws/: channel_managers.rs  errors.rs  messages.rs  mod.rs
migrations/2021-04-25-183832_create_apps/: up.sql
src/: main.rs  repository.rs  routes.rs  schema.rs  server.rs  session.rs
src/models/: mod.rs  responses.rs
src/pusher/: app.rs  channel.rs  messages.rs  mod.rs  socket_id.rs  types.rs
src/server/: errors.rs  messages.rs  mod.rs  session.rs
src/server/routes/: apps.rs  mod.rs  ws.rs
web/: .eslintrc.js  package-lock.json  package.json  webpack.config.ts
web/src/: App.tsx  StringForm.tsx  WebSocketClient.tsx  WebSocketMessages.tsx
web/src/components/: navigation-sidebar.tsx  select-app.tsx
web/src/components/navigation-sidebar/: list-link-item.tsx
web/src/hoc/: with-web-socket.tsx
web/src/page/: app-create.tsx  app-index.tsx  dashboard.tsx
web/src/page/dashboard/: connection.tsx
web/src/routers/: app-router.tsx
web/src/store/: http-utils.ts  index.ts  store.ts
web/src/store/entities/: app.ts
