[package]
name = "pusher-wsrs"
version = "0.1.0"
authors = ["Cody <nathancodymann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_with = { version = "1.8.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
futures = "0.3.1"
rand = "0.7"
toml = "0.5"
log="0.4"
env_logger="0.8.3"
clap = "3.0.0-beta.2"

#tokio-stream = "0.1.1"
#tokio = { version = "1", features = ["full"] }
#futures = { version = "0.3", default-features = false, features = ["alloc"] }
#warp = "0.3"
