[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_with = { version = "1.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
actix-web-actors = "3"
actix = "0.10"
rand = "0.7"
